--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "1.1.0",
     "description": "tree visualizer",
     "main": "index.ts",
-    "dependencies": {
-    },
+    "dependencies": {},
     "devDependencies": {
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -17,7 +16,11 @@
         "@types/terser-webpack-plugin": "^1.2.1",
         "@types/webpack": "^4.39.1",
         "@types/webpack-dev-server": "^3.1.7",
+        "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "core-js": "^3.2.1",
         "css-loader": "^3.2.0",
         "mini-css-extract-plugin": "^0.8.0",
